--- a/HospitalApp-web/src/main/webapp/index.xhtml
+++ b/HospitalApp-web/src/main/webapp/index.xhtml
@@ -115,7 +115,7 @@
             <ui:include src="Esterilizacion.xhtml"/>
         </p:dialog>
 
-        <p:dialog id="episodio" maximizable="true" header="Consentimiento Informado" widgetVar="epiCli" showEffect="fade" hideEffect="fade" closeOnEscape="true" 
+        <p:dialog id="episodio" maximizable="true" header="Episodio Clínico" widgetVar="epiCli" showEffect="fade" hideEffect="fade" closeOnEscape="true" 
                   minimizable="true" height="540" width="800" onShow="#{episodioMB.init()}">
             <p:ajax event="close" listener="#{episodioMB.init()}" update="ConsentimientoEst"/>
             <ui:include src="Episodio.xhtml"/>
